fix accordion mobile bug

--- a/src/stories/CbAccordion/cb-accordion.scss
+++ b/src/stories/CbAccordion/cb-accordion.scss
@@ -56,7 +56,7 @@
 
     &-open {
       border-color: var(--yellow);
-      max-height: 200vh;
+      max-height: 1000000px;
       --margin: var(--space-3);
 
       > * {
